chap
>>> print(4)
4
>>> type("Hello, World!")
<class 'str'>
>>> type(17)
<class 'int'>
>>> type(3.2)
<class 'float'>
>>> type("17')
  File "<stdin>", line 1
    type("17')
             ^
SyntaxError: EOL while scanning string literal
>>> type("17")
<class 'str'>
>>> type('3.2')
<class 'str'>
>>> print(1000000)
1000000
>>> print(1,000,000)
1 0 0
>>> message = 'And now for something completely different'
>>> n = 17
>>> pi =3.1415926535897931
>>> print(n)
17
>>> print(message)
And now for something completely different
>>> type(pi)
<class 'float'>
>>> m =1,000,000
>>> type(m)
<class 'tuple'>
>>> 76trombones = 'bigparade'
  File "<stdin>", line 1
    76trombones = 'bigparade'
              ^
SyntaxError: invalid syntax
>>> more@=100000
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'more' is not defined
>>> class = 'advance'
  File "<stdin>", line 1
    class = 'advance'
          ^
SyntaxError: invalid syntax
>>> x
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'x' is not defined
>>> minute = 133
>>> 1+1
2
>>> 5
5
>>> x=5
>>> x+1
6
>>> (1+1)**(5-2)
8
>>> 2**1+1
3
>>> 3*1**3
3
>>> 3**3
27
>>> 3*1
3
>>> 2*3-1
5
>>> 2*(3-1)
4
>>> first ='thoran'
>>> second ='warlber'
>>> print(first+second)
thoranwarlber
>>> 'Spam' *3
'SpamSpamSpam'
>>> 
